--- a/mpi-week/assignments/Assignments-1.ipynb
+++ b/mpi-week/assignments/Assignments-1.ipynb
@@ -87,6 +87,102 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e2b94b44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: mpi4py in c:\\users\\hp\\anaconda3\\lib\\site-packages (3.1.4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install mpi4py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6ff16ae3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing toto.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install mpi4py\n",
+    "%%writefile toto.py\n",
+    "\n",
+    "from mpi4py import MPI\n",
+    "\n",
+    "COMM = MPI.COMM_WORLD\n",
+    "RANK= COMM.Get_rank()\n",
+    "SIZE = COMM.GET_size()\n",
+    "\n",
+    "def f1():\n",
+    "    print(\"toto\",RANK,SIZE)\n",
+    "    \n",
+    "f1\n",
+    "\n",
+    "!mpirun -n 4 python3 toto.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "57fce1f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'mpirun' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mpirun -n 4 python3 toto.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3f47f150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement Openmpi (from versions: none)\n",
+      "ERROR: No matching distribution found for Openmpi\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install Openmpi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc70d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
